--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1></h1>
-        <p></p>
+        <h1>Inspire</h1>
+        <p><em>Clínica de Fisioterapia</em></p>
         <nav>
             <ul>
                 <a href="#">Sobre nós</a>
@@ -21,21 +21,29 @@
         </nav>
     </header>
     <main>
-        <article>
-            <h1>Título Artigo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
-        </article>
-        <article>
-            <h1>Título Artigo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
-        </article>
-        <article>
-            <h1>Título Artigo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
-        </article>
+        <section>
+            <article>
+                <h1>Nossa História</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
+                <div class="imagem">IMAGEM AQUI</div>
+                <div class="imagem">IMAGEM AQUI</div>
+                <div class="imagem">IMAGEM AQUI</div>
+                <div class="imagem">IMAGEM AQUI</div>
+            </article>
+        </section>
+        <section>
+            <div class="midia">VÍDEO/MÍDIA AQUI</div>
+        </section>
+        <section>
+            <button><a href="#">AGENDE SUA SEÇÃO</a></button>
+        </section>
     </main>
     <footer>
-        <p>Site desenvolvido por Huann Almeida</p>
+        [IMAGEM AQUI]
+        [IMAGEM AQUI]
+        [IMAGEM AQUI]
+        <p><em>Site desenvolvido pelo <a href="">NerdDosSites</a></em></p>
     </footer>
 </body>
 </html>
