--- a/index.html
+++ b/index.html
@@ -23,27 +23,33 @@
     <main>
         <section>
             <article>
-                <h1>Nossa História</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
-                <div class="imagem">IMAGEM AQUI</div>
-                <div class="imagem">IMAGEM AQUI</div>
-                <div class="imagem">IMAGEM AQUI</div>
-                <div class="imagem">IMAGEM AQUI</div>
+                <div class="text">
+                    <h1>Nossa História</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
+                </div>
+                <div class="imgBox">
+                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
+                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
+                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
+                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
+                </div>
             </article>
         </section>
         <section>
-            <div class="midia">VÍDEO/MÍDIA AQUI</div>
+            <div class="midia">
+                VÍDEO/MÍDIA AQUI
+            </div>
         </section>
         <section>
-            <button><a href="#">AGENDE SUA SEÇÃO</a></button>
+            <button name="button">AGENDE SUA SEÇÃO</button>
         </section>
     </main>
     <footer>
-        [IMAGEM AQUI]
-        [IMAGEM AQUI]
-        [IMAGEM AQUI]
+        <a href="https://www.instagram.com/draemanuellefisio/"><div class="icon"><img src="images/instagram.png" alt="instagram"></div></a>
+        <a href="#"><div class="icon"><img src="images/whatsapp.png" alt=""></div></a>
         <p><em>Site desenvolvido pelo <a href="">NerdDosSites</a></em></p>
+        <div class="licence">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
 </body>
 </html>
