--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ea pariatur cum, sed ut error ipsum aliquid fuga sunt et voluptas mollitia, quibusdam laborum unde harum consequatur fugiat quae aliquam!</p>
                 </div>
-                <div class="imgBox">
-                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
-                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
-                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
-                    <div class="imagem"><img src="images/image.png" alt="imagem"></div>
-                </div>
+                <picture>
+                    <source media="(max-width: 700px)" srcset="images/imgsmall.png">
+                    <img src="images/imgbig.png" alt="fotos pisoterapia">
+                </picture>
             </article>
         </section>
         <section>
@@ -42,14 +40,14 @@
             </div>
         </section>
         <section>
-            <button name="button">AGENDE SUA SEÇÃO</button>
+            <a href="#">AGENDE SUA SESSÃO</a>
         </section>
     </main>
     <footer>
-        <a href="https://www.instagram.com/draemanuellefisio/"><div class="icon"><img src="images/instagram.png" alt="instagram"></div></a>
-        <a href="#"><div class="icon"><img src="images/whatsapp.png" alt=""></div></a>
-        <p><em>Site desenvolvido pelo <a href="">NerdDosSites</a></em></p>
-        <div class="licence">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <a href="https://www.instagram.com/draemanuellefisio/" target="_blank"><div class="icon"><img src="images/instagram.png" alt="instagram"></div></a>
+        <a href="#" target="_blank"><div class="icon"><img src="images/whatsapp.png" alt=""></div></a>
+        <p><em>Site desenvolvido pelo <a href="https://wa.me/5583999802317" target="_blank">&copy; NerdDosSites</a></em></p>
+        <div class="licence">Icons made by <a href="https://www.freepik.com" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> || Images made by <a href="https://www.unsplash.com" title="unsplash" target="_blank">Unsplash.</a> Find the license at <a href="https://www.unsplash.com/license" title="Unsplash License" target="_blank">www.unsplash.com/license</a></div>
     </footer>
 </body>
 </html>
